Fix margins and alignment for cards

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -78,6 +78,8 @@ p {
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  width: 100%;
+  height: 100%;
 }
 
 .project-card {
