--- a/app/assets/stylesheets/base/_scroll.scss
+++ b/app/assets/stylesheets/base/_scroll.scss
@@ -1,7 +1,6 @@
 .scroll {
   margin-top: 15px;
   overflow: scroll;
-  height: 7.75em;
 }
 
 ::-webkit-scrollbar {
